<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradbgr">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/profil"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logoapk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-12dp" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/judul_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="News"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/bgrrv"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil">

        <TextView
            android:id="@+id/descriptionapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_api_based_application_that_provides_features_for_users_to_read_the_latest_news_ranging_from_national_news_to_international_news" />

        <TextView
            android:id="@+id/fitur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/fitur" />

        <TextView
            android:id="@+id/fiturberitaindoninggris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berita_indonesia_dan_inggris" />

        <TextView
            android:id="@+id/fiturlocalization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localization" />

        <TextView
            android:id="@+id/fiturdeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description" />

        <TextView
            android:id="@+id/fiturlebihbnykberita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lebih_banyak_berita_segera_hadir" />



    </LinearLayout>

    <TextView
        android:layout_marginBottom="20dp"
        android:id="@+id/madeby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/this_app_is_made_by_dzaky"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>